fix second scrollbar bug

--- a/app/tinder/style.css
+++ b/app/tinder/style.css
@@ -13,7 +13,6 @@
     max-width: 400px;
     height: 650px;
     justify-content: center;
-    height: 100vh;
 }
 
 .card {
